esports img fix

--- a/Esports/index.html
+++ b/Esports/index.html
@@ -1815,24 +1815,32 @@
           <p>League of Legends</p>
           <img
             src="/img/news-banners/league-of-legends-banner.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
           <p>Dota 2</p>
           <img
             src="/img/news-banners/dota-2-banner.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
           <p>CS:GO</p>
           <img
             src="/img/news-banners/cs-banner.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
           <p>Valorant</p>
           <img
             src="/img/news-banners/valorant-banner.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="game screenshot"
           />
