--- a/News-Articles/BC.Game-LoL-Worlds2024/index.html
+++ b/News-Articles/BC.Game-LoL-Worlds2024/index.html
@@ -230,7 +230,7 @@
           aria-label="Read more about BCGame 200% bonus"
         >
           <img
-            src="/img/news-banners/bcgame-worlds2024.avif"
+            src="/img/news-banners/bcgame-worlds2024.webp"
             alt="BC>GAME 2000 bonus banner"
           />
         </a>
