--- a/Esports/index.html
+++ b/Esports/index.html
@@ -252,11 +252,16 @@
             <p>
               Here at <a href="/">ALL4WINS</a>, we have completed a thorough
               assessment of many of the greatest cryptocurrency and fiat esports
-              betting sites available. All with the hopes of assisting you in
-              finding the best esports betting site for your needs.CS, League of
-              Legends, Dota 2, Valorant, and others. Unlock exclusive promos,
-              free bets, and one-of-a-kind benefits for each major tournament or
-              championship!
+              betting sites available.
+            </p>
+            <p>
+              All with the hopes of assisting you in finding the best esports
+              betting site for your needs.CS, League of Legends, Dota 2,
+              Valorant, and others.
+            </p>
+            <p>
+              Unlock exclusive promos, free bets, and one-of-a-kind benefits for
+              each major tournament or championship!
             </p>
           </div>
         </div>
