roobet reviw img fix

--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -74,6 +74,8 @@
             <img
               id="logo-img"
               src="/img/All4Wins-logo.webp"
+              width="300"
+              height="200"
               loading="lazy"
               alt="home logo"
             />
@@ -94,7 +96,14 @@
       <!-- Side Menu -->
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
-          <img src="/img/All4Wins-logo.webp" alt="Logo" class="logo-image" />
+          <img
+            src="/img/All4Wins-logo.webp"
+            alt="Logo"
+            width="300"
+            height="200"
+            loading="lazy"
+            class="logo-image"
+          />
           <a href="/"><p>All4Wins</p></a>
           <span class="close-button" onclick="toggleNavigation()">&times;</span>
         </div>
@@ -104,6 +113,8 @@
             <div class="nav-link casino-link">
               <img
                 src="/img/casino-logo.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="Casino Icon"
                 class="nav-icon"
@@ -116,6 +127,8 @@
             <div class="nav-link esports-link">
               <img
                 src="/img/controller-logo.webp"
+                width="300"
+                height="200"
                 alt="Esports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -128,6 +141,8 @@
             <div class="nav-link sports-link">
               <img
                 src="/img/football-logo.webp"
+                width="300"
+                height="200"
                 alt="Sports Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -143,6 +158,8 @@
           >
             <img
               src="/img/review-icon.webp"
+              width="300"
+              height="200"
               alt="Reviews Icon"
               class="nav-icon"
               loading="lazy"
@@ -169,6 +186,8 @@
           >
             <img
               src="/img/diamond-logo.webp"
+              width="300"
+              height="200"
               alt="Bonus Icon"
               class="nav-icon"
               loading="lazy"
@@ -186,6 +205,8 @@
             <div class="nav-link news-link">
               <img
                 src="/img/news-logo.webp"
+                width="300"
+                height="200"
                 alt="News Icon"
                 class="nav-icon"
                 loading="lazy"
@@ -218,7 +239,11 @@
         <a
           href="https://go.roobetaffiliates.com/visit/?bta=39114&nci=5349"
           aria-label="Read more about Roobet"
-          ><img src="/img/news-banners/roobet-banner4.webp" alt="roobet banner"
+          ><img
+            src="/img/news-banners/roobet-banner4.webp"
+            width="300"
+            height="200"
+            alt="roobet banner"
         /></a>
       </div>
 
@@ -340,6 +365,8 @@
             <div class="review-img">
               <img
                 src="/img/news-banners/roobet-casino.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="katsubet site"
               />
@@ -370,6 +397,8 @@
             <div class="review-img">
               <img
                 src="/img/news-banners/roobet-slots.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="katsubet site"
               />
@@ -377,6 +406,8 @@
             <div class="review-img">
               <img
                 src="/img/news-banners/roobet-original.webp"
+                width="300"
+                height="200"
                 loading="lazy"
                 alt="katsubet site"
               />
@@ -547,6 +578,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-welcome.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -592,6 +625,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-promotions.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -687,6 +722,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-original.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -711,6 +748,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-slots.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -747,6 +786,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-live.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -772,6 +813,8 @@
         <div class="review-img">
           <img
             src="/img/news-banners/roobet-sports.webp"
+            width="300"
+            height="200"
             loading="lazy"
             alt="katsubet site"
           />
@@ -850,7 +893,13 @@
               Gamble<span>Aware</span>
             </a>
           </p>
-          <img src="/img/under18.webp" loading="lazy" alt="under 18" />
+          <img
+            src="/img/under18.webp"
+            width="300"
+            height="200"
+            loading="lazy"
+            alt="under 18"
+          />
         </div>
 
         <div class="contact-us">
