--- a/Esports/index.html
+++ b/Esports/index.html
@@ -100,9 +100,9 @@
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
           <img
-          src="/img/All4Wins-new-logo.webp"
-          width="200"
-          height="200"
+            src="/img/All4Wins-new-logo.webp"
+            width="200"
+            height="200"
             loading="lazy"
             alt="Logo"
             class="logo-image"
@@ -280,6 +280,35 @@
             <div class="news-wrapper">
               <div class="news-slide">
                 <!-- News divs will be inserted here dynamically -->
+
+                <!-- ggbet freebet vcl emea-->
+                <div class="news-item">
+                  <a
+                    href="/News-Articles/GGBET-Freebet-for-everyone-in-VCT-EMEA/"
+                  >
+                    <div class="news-banner">
+                      <img
+                        src="/img/news-banners/ggBet-nice-shot-news.webp"
+                        width="300"
+                        height="200"
+                        alt="ggbet-esl-bangkok-news"
+                        loading="lazy"
+                      />
+                    </div>
+                    <div class="news-content">
+                      <h2>
+                        NICE SHOT, SMART BET – FREEBET FOR EVERYONE IN VCT EMEA!
+                        <br />
+
+                        <strong>Offer expires on February 07th</strong>
+                      </h2>
+
+                      <div class="news-button">
+                        <button>Read More</button>
+                      </div>
+                    </div>
+                  </a>
+                </div>
                 <!-- esports event calendar-->
                 <div class="news-item">
                   <a href="/News-Articles/Esports-Event-Calendar-2025/">
