--- a/Bonuses/Cashback/index.html
+++ b/Bonuses/Cashback/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Cashback",
-            "item": "https://www.all4wins.com/Cashback/"
+            "item": "https://www.all4wins.com/Bonuses/Cashback/"
           }
         ]
       }
