--- a/Bonuses/No-Deposit/index.html
+++ b/Bonuses/No-Deposit/index.html
@@ -44,7 +44,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "No Deposit",
-            "item": "https://www.all4wins.com/No Deposit/"
+            "item": "https://www.all4wins.com/Bonuses/No Deposit/"
           }
         ]
       }
