--- a/Bonuses/No-Wagering/index.html
+++ b/Bonuses/No-Wagering/index.html
@@ -48,7 +48,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "No Wagering",
-            "item": "https://www.all4wins.com/No Wagering/"
+            "item": "https://www.all4wins.com/Bonuses/No Wagering/"
           }
         ]
       }
