--- a/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
+++ b/News-Articles/BC.GAME-Horse-Racing-FreeBets/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BC GAME Horse Racing FreeBets",
-            "item": "https://www.all4wins.com/News/BC.GAME-Horse-Racing-FreeBets/"
+            "item": "https://www.all4wins.com/News-Articles/BC.GAME-Horse-Racing-FreeBets/"
           }
         ]
       }
