--- a/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
+++ b/News-Articles/BC.Game-LCFC-Bet-Guaranteed/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BC Game LCFC Bet Guaranteed",
-            "item": "https://www.all4wins.com/News/BC.Game-LCFC-Bet-Guaranteed/"
+            "item": "https://www.all4wins.com/News-Articles/BC.Game-LCFC-Bet-Guaranteed/"
           }
         ]
       }
