--- a/News-Articles/BC.Game-LoL-Worlds2024/index.html
+++ b/News-Articles/BC.Game-LoL-Worlds2024/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BC Game LoL Worlds2024",
-            "item": "https://www.all4wins.com/News/BC.Game-LoL-Worlds2024/"
+            "item": "https://www.all4wins.com/News-Articles/BC.Game-LoL-Worlds2024/"
           }
         ]
       }
