--- a/News-Articles/BC.Game-Mining-Rush/index.html
+++ b/News-Articles/BC.Game-Mining-Rush/index.html
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "BC Game Mining Rush",
-            "item": "https://www.all4wins.com/News/BC.Game-Mining-Rush/"
+            "item": "https://www.all4wins.com/News-Articles/BC.Game-Mining-Rush/"
           }
         ]
       }
