--- a/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/index.html
+++ b/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Bc Game UCL Weekly Lucky Draw",
-            "item": "https://www.all4wins.com/News/Bc.Game-UCL-Weekly-Lucky-Draw/"
+            "item": "https://www.all4wins.com/News-Articles/Bc.Game-UCL-Weekly-Lucky-Draw/"
           }
         ]
       }
