--- a/News-Articles/GG.Bet-F1-Insurance/index.html
+++ b/News-Articles/GG.Bet-F1-Insurance/index.html
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet F1 Insurance",
-            "item": "https://www.all4wins.com/News/GG.Bet-F1-Insurance/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-F1-Insurance/"
           }
         ]
       }
