--- a/News-Articles/GG.Bet-Mystical-Night-of-Wins/index.html
+++ b/News-Articles/GG.Bet-Mystical-Night-of-Wins/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet Mystical Night of Wins",
-            "item": "https://www.all4wins.com/News/GG.Bet-Mystical-Night-of-Wins/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-Mystical-Night-of-Wins/"
           }
         ]
       }
