--- a/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
+++ b/News-Articles/GG.Bet-PGL-Wallachia-Season-2/index.html
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet PGL Wallachia Season 2",
-            "item": "https://www.all4wins.com/News/GG.Bet-PGL-Wallachia-Season-2/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-PGL-Wallachia-Season-2/"
           }
         ]
       }
