--- a/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/index.html
+++ b/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet Runic freebets on League of Legends",
-            "item": "https://www.all4wins.com/News/GG.Bet-Runic-freebets-on-League-of-Legends/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-Runic-freebets-on-League-of-Legends/"
           }
         ]
       }
