--- a/News-Articles/GG.Bet-Start-NHL-Season/index.html
+++ b/News-Articles/GG.Bet-Start-NHL-Season/index.html
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet Start NHL Season",
-            "item": "https://www.all4wins.com/News/GG.Bet-Start-NHL-Season/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-Start-NHL-Season/"
           }
         ]
       }
