--- a/News-Articles/Loot.Bet-IEM-Rio/index.html
+++ b/News-Articles/Loot.Bet-IEM-Rio/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Loot Bet IEM Rio",
-            "item": "https://www.all4wins.com/News/Loot.Bet-IEM-Rio/"
+            "item": "https://www.all4wins.com/News-Articles/Loot.Bet-IEM-Rio/"
           }
         ]
       }
