--- a/News-Articles/Loot.Bet-PGL-Wallachia-Season-2/index.html
+++ b/News-Articles/Loot.Bet-PGL-Wallachia-Season-2/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Loot Bet PGL Wallachia Season 2",
-            "item": "https://www.all4wins.com/News/Loot.Bet-PGL-Wallachia-Season-2/"
+            "item": "https://www.all4wins.com/News-Articles/Loot.Bet-PGL-Wallachia-Season-2/"
           }
         ]
       }
