--- a/News-Articles/Plinko/index.html
+++ b/News-Articles/Plinko/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Plinko",
-            "item": "https://www.all4wins.com/News/Plinko/"
+            "item": "https://www.all4wins.com/News-Articles/Plinko/"
           }
         ]
       }
