--- a/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
+++ b/News-Articles/Roobet-$100000-Weekly-Raffles/index.html
@@ -64,7 +64,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Roobet 100000 Weekly Raffles",
-            "item": "https://www.all4wins.com/News/Roobet-$100000-Weekly-Raffles/"
+            "item": "https://www.all4wins.com/News-Articles/Roobet-$100000-Weekly-Raffles/"
           }
         ]
       }
