--- a/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
+++ b/News-Articles/Roobet’s-Latest-Sportsbook-Promos/index.html
@@ -54,7 +54,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Roobet Latest Sportsbook Promos",
-            "item": "https://www.all4wins.com/News/Roobet's-Latest-Sportsbook-Promos/"
+            "item": "https://www.all4wins.com/News-Articles/Roobet's-Latest-Sportsbook-Promos/"
           }
         ]
       }
