--- a/News-Articles/Snoop's-Hot-Box-Game/index.html
+++ b/News-Articles/Snoop's-Hot-Box-Game/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Snoops Hot Box Game",
-            "item": "https://www.all4wins.com/News/Snoop's-Hot-Box-Game/"
+            "item": "https://www.all4wins.com/News-Articles/Snoop's-Hot-Box-Game/"
           }
         ]
       }
