--- a/News-Articles/Snoop’s Highrollers/index.html
+++ b/News-Articles/Snoop’s Highrollers/index.html
@@ -54,7 +54,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Snoops Highrollers",
-            "item": "https://www.all4wins.com/News/Snoop's Highrollers/"
+            "item": "https://www.all4wins.com/News-Articles/Snoop's Highrollers/"
           }
         ]
       }
