--- a/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/index.html
+++ b/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/index.html
@@ -53,7 +53,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Thunderpick's IEM Rio 2024 Betting Predictions",
-            "item": "https://www.all4wins.com/News/Thunderpick's-IEM-Rio-2024-Betting-Predictions/"
+            "item": "https://www.all4wins.com/News-Articles/Thunderpick's-IEM-Rio-2024-Betting-Predictions/"
           }
         ]
       }
