--- a/Reviews-page/7Bit-Casino/index.html
+++ b/Reviews-page/7Bit-Casino/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "7BitCasino",
-            "item": "https://www.all4wins.com/7BitCasino"
+            "item": "https://www.all4wins.com/Reviews-page/7Bit-Casino/"
           }
         ]
       }
