--- a/Reviews-page/BC.Games/index.html
+++ b/Reviews-page/BC.Games/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "BCGames",
-            "item": "https://www.all4wins.com/BCGames"
+            "item": "https://www.all4wins.com/Reviews-page/BC.Games/"
           }
         ]
       }
