--- a/Reviews-page/Rabona/index.html
+++ b/Reviews-page/Rabona/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Rabona",
-            "item": "https://www.all4wins.com/Rabona"
+            "item": "https://www.all4wins.com/Reviews-page/Rabona/"
           }
         ]
       }
