--- a/Reviews-page/TrustDice/index.html
+++ b/Reviews-page/TrustDice/index.html
@@ -45,7 +45,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "TrustDice",
-            "item": "https://www.all4wins.com/TrustDice"
+            "item": "https://www.all4wins.com/Reviews-page/TrustDice/"
           }
         ]
       }
