--- a/Reviews-page/Wild.io/index.html
+++ b/Reviews-page/Wild.io/index.html
@@ -39,9 +39,15 @@
         "itemListElement": [
           {
             "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.all4wins.com/"
+          },
+          {
+            "@type": "ListItem",
             "position": 2,
             "name": "Wildio",
-            "item": "https://www.all4wins.com/Wildio"
+            "item": "https://www.all4wins.com/Reviews-page/Wild.io/"
           }
         ]
       }
