--- a/Bonuses/First-Deposit/index.html
+++ b/Bonuses/First-Deposit/index.html
@@ -49,7 +49,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "First Deposit",
-            "item": "https://www.all4wins.com/First Deposit/"
+            "item": "https://www.all4wins.com/Bonuses/First Deposit/"
           }
         ]
       }
@@ -87,9 +87,9 @@
       <div id="side-navigation" class="side-navigation">
         <div class="navigation-header">
           <img
-          src="/img/All4Wins-new-logo.webp"
-              width="200"
-              height="200"
+            src="/img/All4Wins-new-logo.webp"
+            width="200"
+            height="200"
             alt="Logo"
             class="logo-image"
             loading="lazy"
