--- a/News-Articles/GG.Bet-CS2-Shanghai-Major/index.html
+++ b/News-Articles/GG.Bet-CS2-Shanghai-Major/index.html
@@ -55,7 +55,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet CS2 Shanghai Major",
-            "item": "https://www.all4wins.com/News/GG.Bet-CS2-Shanghai-Major/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-CS2-Shanghai-Major/"
           }
         ]
       }
