--- a/News-Articles/GG.Bet-ESL-Bangkok/index.html
+++ b/News-Articles/GG.Bet-ESL-Bangkok/index.html
@@ -54,7 +54,7 @@
           "@type": "ListItem",
           "position": 3,
           "name": "GG Bet ESL Bangkok",
-          "item": "https://www.all4wins.com/News/GG.Bet-ESL-Bangkok/"
+          "item": "https://www.all4wins.com/News-Articles/GG.Bet-ESL-Bangkok/"
         }
       ]
     }
