--- a/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/index.html
+++ b/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet Whirlwind of Football Bonuses",
-            "item": "https://www.all4wins.com/News/GG.Bet-Whirlwind-of-Football-Bonuses/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-Whirlwind-of-Football-Bonuses/"
           }
         ]
       }
