--- a/News-Articles/GG.Bet-Winback-On-Dota2-Bets/index.html
+++ b/News-Articles/GG.Bet-Winback-On-Dota2-Bets/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "GG Bet Winback On Dota2 Bets",
-            "item": "https://www.all4wins.com/News/GG.Bet-Winback-On-Dota2-Bets/"
+            "item": "https://www.all4wins.com/News-Articles/GG.Bet-Winback-On-Dota2-Bets/"
           }
         ]
       }
