--- a/News-Articles/Loot.Bet-DreamLeague-Gifts/index.html
+++ b/News-Articles/Loot.Bet-DreamLeague-Gifts/index.html
@@ -56,7 +56,7 @@
             "@type": "ListItem",
             "position": 3,
             "name": "Loot Bet DreamLeague Gifts",
-            "item": "https://www.all4wins.com/News/Loot.Bet-DreamLeague-Gifts/"
+            "item": "https://www.all4wins.com/News-Articles/Loot.Bet-DreamLeague-Gifts/"
           }
         ]
       }
