--- a/Reviews-page/BetFury/index.html
+++ b/Reviews-page/BetFury/index.html
@@ -42,7 +42,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "BetFury",
-            "item": "https://www.all4wins.com/BetFury"
+            "item": "https://www.all4wins.com/Reviews-page/BetFury/"
           }
         ]
       }
