--- a/Reviews-page/CloudBet/index.html
+++ b/Reviews-page/CloudBet/index.html
@@ -49,7 +49,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "CloudBet",
-            "item": "https://www.all4wins.com/CloudBet"
+            "item": "https://www.all4wins.com/Reviews-page/CloudBet/"
           }
         ]
       }
