--- a/Reviews-page/DuelBits/index.html
+++ b/Reviews-page/DuelBits/index.html
@@ -46,7 +46,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "DuelBits",
-            "item": "https://www.all4wins.com/DuelBits"
+            "item": "https://www.all4wins.com/Reviews-page/DuelBits/"
           }
         ]
       }
