--- a/Reviews-page/Katsubet/index.html
+++ b/Reviews-page/Katsubet/index.html
@@ -52,7 +52,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Katsubet",
-            "item": "https://www.all4wins.com/Katsubet"
+            "item": "https://www.all4wins.com/Reviews-page/Katsubet/"
           }
         ]
       }
