--- a/Reviews-page/Loot.bet/index.html
+++ b/Reviews-page/Loot.bet/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Lootbet",
-            "item": "https://www.all4wins.com/Lootbet"
+            "item": "https://www.all4wins.com/Reviews-page/Loot.bet/"
           }
         ]
       }
