--- a/Reviews-page/Roobet/index.html
+++ b/Reviews-page/Roobet/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Roobet",
-            "item": "https://www.all4wins.com/Roobet"
+            "item": "https://www.all4wins.com/Reviews-page/Roobet/"
           }
         ]
       }
