--- a/Reviews-page/Thunderpick/index.html
+++ b/Reviews-page/Thunderpick/index.html
@@ -47,7 +47,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Thunderpick",
-            "item": "https://www.all4wins.com/Thunderpick"
+            "item": "https://www.all4wins.com/Reviews-page/Thunderpick/"
           }
         ]
       }
