--- a/Reviews-page/Wazamba/index.html
+++ b/Reviews-page/Wazamba/index.html
@@ -49,7 +49,7 @@
             "@type": "ListItem",
             "position": 2,
             "name": "Wazamba",
-            "item": "https://www.all4wins.com/Wazamba"
+            "item": "https://www.all4wins.com/Reviews-page/Wazamba/"
           }
         ]
       }
